message and events front end part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.myexample.privateeventconnection">
 
     <application
@@ -9,7 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GroupInfoActivity"></activity>
+        <activity android:name=".EventActivity"></activity>
+        <activity android:name=".MessageListAdapter" />
+        <activity android:name=".MessageActivity" />
+        <activity
+            android:name=".EventsAdapter"
+            tools:ignore="Instantiatable" />
+        <activity android:name=".GroupInfoActivity" />
         <activity android:name=".AfterLoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
