--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EventActivity"></activity>
+        <activity android:name=".EventForm"></activity>
+        <activity android:name=".EventActivity" />
         <activity android:name=".MessageListAdapter" />
         <activity android:name=".MessageActivity" />
         <activity
