--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RemoveUserFromGroupActivity"></activity>
+        <activity android:name=".AddUserToGroupActivity" />
+        <activity android:name=".GroupOperationActivity" />
+        <activity android:name=".DeleteUserActivity" />
+        <activity android:name=".AdminActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <!--
-             The API key for Google Maps-based APIs.
-        -->
+            android:value="@integer/google_play_services_version" /> <!-- The API key for Google Maps-based APIs. -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBKWBA9PcZClf29nbBm6eItRzJVIDkpAfE" />
 
-        <activity android:name=".EventForm"></activity>
+        <activity android:name=".EventForm" />
         <activity android:name=".EventActivity" />
         <activity android:name=".MessageListAdapter" />
         <activity android:name=".MessageActivity" />
