--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_yf"
@@ -16,6 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_yf_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="false"
+            android:label="@string/app_name" />
+
         <activity
             android:name=".CreateGroupActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden" />
